Support Dave Protocol & fix yt oauth regression (#26)
* Support DAVE Protocol: Update to JDA 6.3.0/Java 25 & new audio dependencies

- Upgrade JDA to version 6.3.0 in pom.xml
- Add JDave and udpqueue for AudioModuleConfig
- Updated Java compiler source and target versions to 25
- Modified GitHub Actions to set up JDK 25 for CI workflows
- Update Dockerfile to use Java 25

* Update project version to 0.6.1-support-dave-protocol

* Update maven-shade-plugin version to 3.6.1 in pom.xml

* Update logback-classic dependency version to 1.5.25 in pom.xml

* Add dependency management for various libraries in pom.xml

- Introduced Jackson and JUnit BOMs for version alignment of dependencies.
- Added specific versions for SLF4J API, Kotlin stdlib, JetBrains annotations, org.json, jsoup, Rhino engine, and lava-common to resolve conflicts.
- Updated exclusions in existing dependencies to prevent conflicts with older versions of SLF4J, Kotlin, okhttp, and okio.
- Managed versions for Jackson and JUnit dependencies through BOM for consistency.

* Enhance pom.xml with project metadata and dependency management

- Added project metadata including name, description, URL, inception year, licenses, organization, and developers.
- Updated dependency versions to use properties for better management and consistency.
- Introduced plugin management for various Maven plugins to streamline build configuration.
- Added profiles for code style enforcement, static analysis, test coverage, and dependency analysis.

* Add Maven Failsafe Plugin for Integration Testing and Update CircleCI Configuration

- Introduced the Maven Failsafe Plugin to handle integration tests, including configuration for test execution and report generation.
- Updated CircleCI configuration to use Java 25 and improved caching strategies for Maven dependencies.
- Enhanced GitHub Actions workflow to include coverage reporting with Codecov integration.

* Enhance Docker and CI workflows with build timestamp support

- Added 